--- a/backEnd/pom.xml
+++ b/backEnd/pom.xml
@@ -22,6 +22,7 @@
         <mybatis-generator.version>1.3.6</mybatis-generator.version>
         <pageHelper.version>1.2.10</pageHelper.version>
         <httpclient.version>4.5.11</httpclient.version>
+        <orika.version>1.4.2</orika.version>
     </properties>
 
     <dependencies>
@@ -109,6 +110,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>${orika.version}</version>
         </dependency>
     </dependencies>
 
