--- a/backEnd/pom.xml
+++ b/backEnd/pom.xml
@@ -104,6 +104,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
     </dependencies>
 
     <build>
