--- a/backEnd/pom.xml
+++ b/backEnd/pom.xml
@@ -22,7 +22,7 @@
         <mybatis-generator.version>1.3.6</mybatis-generator.version>
         <pageHelper.version>1.2.10</pageHelper.version>
         <httpclient.version>4.5.11</httpclient.version>
-        <orika.version>1.4.2</orika.version>
+<!--        <orika.version>1.4.2</orika.version>-->
     </properties>
 
     <dependencies>
@@ -111,11 +111,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>ma.glasnost.orika</groupId>
-            <artifactId>orika-core</artifactId>
-            <version>${orika.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>ma.glasnost.orika</groupId>-->
+<!--            <artifactId>orika-core</artifactId>-->
+<!--            <version>${orika.version}</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
