--- a/backEnd/pom.xml
+++ b/backEnd/pom.xml
@@ -18,10 +18,16 @@
         <java.version>1.8</java.version>
         <mybatis.version>2.1.1</mybatis.version>
         <mysqlconnector.version>8.0.11</mysqlconnector.version>
-        <fastjson.version>1.2.59</fastjson.version>
-        <mybatis-generator.version>1.3.6</mybatis-generator.version>
-        <httpclient.version>4.5.11</httpclient.version>
     </properties>
+
+
+    <repositories>
+        <repository>
+            <id>nexus-aliyun</id>
+            <name>Nexus aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -78,18 +84,11 @@
             <version>3.3.2</version>
         </dependency>
 
-        <!--json 序列化工具-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
-            <scope>true</scope>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -98,12 +97,12 @@
             <optional>true</optional>
         </dependency>
 
-
         <dependency>
             <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
+            <artifactId>hutool-core</artifactId>
             <version>5.3.5</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -115,6 +114,7 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.5</version>
         </dependency>
+
     </dependencies>
 
     <build>
