--- a/backEnd/pom.xml
+++ b/backEnd/pom.xml
@@ -114,6 +114,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.73</version>
+        </dependency>
 
     </dependencies>
 
